Changes for Stories | Articles | Gap b/w the sections-Fix 2.O

--- a/eds/blocks/related-stories/related-stories.css
+++ b/eds/blocks/related-stories/related-stories.css
@@ -40,10 +40,6 @@
   grid-column: span 1 / span 1
 }
 
-.related-stories-wrapper :is(.m-3) {
-  margin: 0.75rem
-}
-
 .related-stories-wrapper :is(.mx-auto) {
   margin-left: auto;
   margin-right: auto
@@ -57,18 +53,19 @@
   margin-top: auto
 }
 
+.related-stories-wrapper :is(.mb-3) {
+  margin-bottom: 0.75rem
+}
+
+.related-stories-wrapper :is(.mt-3) {
+  margin-top: 0.75rem
+}
+
 .related-stories-wrapper :is(.line-clamp-3) {
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3
-}
-
-.related-stories-wrapper :is(.line-clamp-4) {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4
 }
 
 .related-stories-wrapper :is(.block) {
@@ -91,20 +88,12 @@
   height: 4rem !important
 }
 
-.related-stories-wrapper :is(.\!h-28) {
-  height: 7rem !important
+.related-stories-wrapper :is(.\!h-\[7\.5rem\]) {
+  height: 7.5rem !important
 }
 
 .related-stories-wrapper :is(.h-full) {
   height: 100%
-}
-
-.related-stories-wrapper :is(.\!h-32) {
-  height: 8rem !important
-}
-
-.related-stories-wrapper :is(.\!h-\[7\.5rem\]) {
-  height: 7.5rem !important
 }
 
 .related-stories-wrapper :is(.w-full) {
@@ -150,11 +139,6 @@
 .related-stories-wrapper :is(.bg-white) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
-}
-
-.related-stories-wrapper :is(.px-3) {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem
 }
 
 .related-stories-wrapper :is(.py-2) {
